<resources>
    <string name="app_name">layoutSample</string>
    <string name="start_radio">START RADIO</string>
    <string name="trance_house">Trance/House</string>
    <string name="avinicii">Avinicii</string>
    <string name="follow">+FOLLOW</string>
    <string name="wake_me_up">Wake Me Up</string>
    <string name="stories">Stories</string>
    <string name="levels">Levels</string>
    <string name="true">True</string>
    <string name="top_tracks">Top tracks</string>
</resources>